@@ -13,6 +13,9 @@ SWIFT_CONF="/etc/swift"         # If you change this change the configuration te
 SWIFT_DEPLOYMENT="package"      # Sets the default to package installation or use -s flag for source installation
                                 # You could also set this variable to "source" for source installation
 
+# SWIFT PACKAGE LOCATION
+SWIFT_REPO="deb http://crashsite.github.com/swift_debian/lucid-$SWIFT_VER lucid main"
+SWIFT_APT_LIST="/etc/apt/sources.list.d/swift_github.list"
 
 
 # SWIFTOPS ACCOUNT INFO 
